remove images, fix spacing, add backgrounds

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,5 @@
 .contact {
-  background-color: #f7f7f7;
-  height: 200px;
+  background-color: #F5F5F5;
   align-items: center;
   text-align: center;
   color: #bababa;
@@ -26,7 +25,6 @@
   display: flex;
   width: 250px;
   justify-content: space-between;
-  margin: 15px;
 }
 .linkedin, .mail, .twitter {
   content: "";
