--- a/css/header.css
+++ b/css/header.css
@@ -17,7 +17,7 @@ header {
   background: linear-gradient(to bottom, transparent, transparent 90%, #dbbaaf 90%, #dbbaaf 100%);
 }
 nav {
-  width: 150px;
+  width: 300px;
   display: flex;
   justify-content: space-around;
   font-size: 14px;
